--- a/.github/workflows/transformers-ci-cd.yml
+++ b/.github/workflows/transformers-ci-cd.yml
@@ -31,6 +31,7 @@ jobs:
 
   deploy:
     name: Deploy to Rancher with Helm
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: validate
 
