--- a/helm/weaviate/templates/deployment.yaml
+++ b/helm/weaviate/templates/deployment.yaml
@@ -44,6 +44,10 @@ spec:
             - name: grpc
               containerPort: 50051
               protocol: TCP
+          {{- with .Values.env }}
+          env:
+            {{- toYaml . | nindent 12 }}
+          {{- end }}
           {{- with .Values.livenessProbe }}
           livenessProbe:
             {{- toYaml . | nindent 12 }}
