--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -35,7 +35,7 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
-      - name: Build Next.js Client with pnpm
+      - name: Build Vite Client with pnpm
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
           pnpm install
