--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,11 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "lint:fix": "next lint --fix",
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "start": "vite preview",
     "prettier": "prettier . --check",
     "prettier:fix": "prettier . --write",
     "prepare": "cd .. && husky client/.husky"
@@ -20,32 +19,30 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
-    "next": "15.4.0-canary.126",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.1",
+    "react-router-dom": "^6.26.1",
     "sonner": "^1.4.0",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18.2.66",
+    "@types/react-dom": "^18.2.22",
+    "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.0.1",
-    "eslint": "^9",
-    "eslint-config-next": "15.3.2",
     "eslint-config-prettier": "^10.1.5",
-    "eslint-plugin-no-relative-import-paths": "^1.6.1",
-    "eslint-plugin-tailwindcss": "^3.18.0",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
     "husky": "^9.1.7",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vite": "^5.2.0"
   }
 }
