[PROMETHEUS] Add prometheus to remaining services

--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -4,6 +4,20 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
+    # Health check endpoint
+    location /health {
+        alias /usr/share/nginx/html/health.json;
+        add_header Content-Type application/json;
+        add_header Cache-Control "no-cache, no-store, must-revalidate";
+    }
+
+    # Basic metrics endpoint (nginx status)
+    location /metrics {
+        stub_status on;
+        access_log off;
+        add_header Content-Type text/plain;
+    }
+
     # Handle client-side routing
     location / {
         try_files $uri $uri/ /index.html;
