--- a/server/recipe/src/main/resources/application.yml
+++ b/server/recipe/src/main/resources/application.yml
@@ -12,6 +12,40 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
+
+logging:
+  level:
+    root: INFO
+    com.recipefy.recipe: DEBUG
+    com.recipefy.recipe.controller: DEBUG
+    com.recipefy.recipe.service: DEBUG
+    com.recipefy.recipe.repository: DEBUG
+    org.springframework.web: DEBUG
+    org.hibernate.SQL: DEBUG
+    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss.SSS} [%thread] %-5level %logger{36} - %msg%n"
+
+management:
+  endpoint:
+    health:
+      probes:
+        enabled: true
+      show-details: always
+    prometheus:
+      enabled: true
+  metrics:
+    export:
+      prometheus:
+        enabled: true
+    distribution:
+      percentiles-histogram:
+        http.server.requests: true
+  endpoints:
+    web:
+      exposure:
+        include: health,info,prometheus
+
 vcs:
   service:
     url: ${VERSION_SERVICE_HOST}:${VERSION_SERVICE_PORT}
