[ALL] Add tests to missing services and add swagger to missing services
Co-authored-by: erhanvarlik <erhanvarlik1@gmail.com>
Co-authored-by: iremyelkanat <iremecemyelkanat@gmail.com>

--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -35,11 +35,18 @@ jobs:
       - name: Install pnpm
         run: npm install -g pnpm
 
-      - name: Build Vite Client with pnpm
+      - name: Install dependencies
+        working-directory: ${{ env.WORKING_DIRECTORY }}
+        run: pnpm install
+
+      - name: Run TypeScript tests
         working-directory: ${{ env.WORKING_DIRECTORY }}
         run: |
-          pnpm install
+          # Run TypeScript compilation check
           pnpm run build
+          
+          # Run test suite with vitest
+          pnpm run test
 
   build:
     name: Build and Push Docker Images
