--- a/.github/workflows/genai-ci-cd.yml
+++ b/.github/workflows/genai-ci-cd.yml
@@ -47,17 +47,8 @@ jobs:
           python -m py_compile request_models.py
           python -m py_compile response_models.py
           
-          # Run FastAPI health check test
-          python -c "
-          import asyncio
-          from main import app
-          from fastapi.testclient import TestClient
-          
-          client = TestClient(app)
-          response = client.get('/health')
-          assert response.status_code == 200
-          print('Health check test passed')
-          "
+          # Run comprehensive test suite
+          pytest test_genai.py -v --tb=short
 
   build:
     name: Build and Push Docker Images
