--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "start": "vite preview",
+    "test": "vitest run",
+    "test:watch": "vitest",
     "prettier": "prettier . --check",
     "prettier:fix": "prettier . --write",
     "prepare": "cd .. && husky client/.husky"
@@ -42,11 +44,13 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "husky": "^9.1.7",
+    "jsdom": "^24.1.0",
     "postcss": "^8",
     "prettier": "^3.5.3",
     "tailwind-merge": "^3.3.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^2.0.0"
   }
 }
