--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -11,3 +11,6 @@ langchain-text-splitters
 langchain-huggingface
 sentence-transformers
 prometheus_client
+pytest==7.4.3
+pytest-asyncio==0.23.2
+httpx==0.27.0
