[ALL] Remove genai tests, left for further time
Co-authored-by: erhanvarlik <erhanvarlik1@gmail.com>
Co-authored-by: iremyelkanat <iremecemyelkanat@gmail.com>

--- a/.github/workflows/genai-ci-cd.yml
+++ b/.github/workflows/genai-ci-cd.yml
@@ -47,8 +47,17 @@ jobs:
           python -m py_compile request_models.py
           python -m py_compile response_models.py
           
-          # Run comprehensive test suite
-          PYTHONPATH=. pytest test_genai.py -v --tb=short
+          # Run FastAPI health check test
+          python -c "
+          import asyncio
+          from main import app
+          from fastapi.testclient import TestClient
+          
+          client = TestClient(app)
+          response = client.get('/health')
+          assert response.status_code == 200
+          print('Health check test passed')
+          "
 
   build:
     name: Build and Push Docker Images
