--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -10,4 +10,4 @@ langchain-community
 langchain-text-splitters
 langchain-huggingface
 sentence-transformers
-prometheus_client
+prometheus-fastapi-instrumentator
