fix auth variables

--- a/helm/mongodb/secret.yaml
+++ b/helm/mongodb/secret.yaml
@@ -4,24 +4,21 @@ metadata:
     name: mongodb-secret
 type: Opaque
 stringData:
-    mongodb-root-password: ENC[AES256_GCM,data:7i5q9fwxLWsvTLIQTuHn2Q==,iv:X2MGa0FSsD0StnDPj8Bk7TA4xslqhNNtbc/PUw6jyf0=,tag:3hwzLtVfu7Ee/JEtDHAGyg==,type:str]
-    mongodb-password: ENC[AES256_GCM,data:jHWLsISP9cXm7UXM3lt2ow==,iv:ugwPk3YMwdesDiSo6Tagcgt/vgdDyPPv4athNBbCYk8=,tag:T4G1kbxb20alELDs4WpaDA==,type:str]
-    mongodb-root-user: ENC[AES256_GCM,data:PlXgLII=,iv:O4hWi8hybvohtdDeOfveJ0CezYxyK4s0yFej8j4bBLw=,tag:uhZ6M2EbstC+FSkgtsKuGQ==,type:str]
-    mongodb-username: ENC[AES256_GCM,data:zn5WWpw=,iv:5rgf5DqyjvKRDED8ES3fJU/qYBFI92s7k3hiAOr//xE=,tag:j8/RooBYztpD6h79m+okqg==,type:str]
-    mongodb-database: ENC[AES256_GCM,data:YfUzV3yuIbk=,iv:M0nRmoLtTnqPGePb4TwaSkKS5l2KTxS1q/aLdRzUxro=,tag:/OmPfMh/tEYw37xgvo3Slw==,type:str]
-    mongodb-replica-set-key: ENC[AES256_GCM,data:RyRhzC/VSOr+jg==,iv:ZuIBa07bVQOTn1xJ0KS0fD4rk3ccqGBHlMKJbK92PxU=,tag:c1/49AQCo59JG4hrJ6LIHA==,type:str]
+    mongodb-root-password: ENC[AES256_GCM,data:/2+ys7bsyfwJoTzfJBgOnw==,iv:4CvXEhQcXiv8/6TBMBh+WqpVcku+tI5hLbAg5uVo6EU=,tag:ops/YGVLLIy3hBlCN9ZJeQ==,type:str]
+    mongodb-replica-set-key: ENC[AES256_GCM,data:rsRbsSf/Oot5nw==,iv:g0CpVwWRwnCQZ1QbIstmod0On+9EHOwcmgSFvZgXfvM=,tag:KukQfRDRx52duyp44HyEpw==,type:str]
+    mongodb-root-user: ENC[AES256_GCM,data:N6FjT/I=,iv:fmQxN6xFrOyeuIu+Hb9DYagNGqmGHjEDUuRWXqXV+7k=,tag:Z01WAIkJ6uqsKxbalNzwkw==,type:str]
 sops:
     age:
         - recipient: age120tm04f69wuvcnrssp6a5ysc6hm544cdsw7rspcjn6m9976tcavs0ftw20
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBNbU9QcGVnRWpSamlrMW5t
-            ZHpmalM5TWt3Z3RmYWpMZER6VjRKajV6RWt3CmtYSlBUY2JUcVZCYStRbkdsTCsv
-            YUh2bHE3NW95TURSQkhQUlFNcTZCZm8KLS0tIGY5aUs4QmFwVW92bjRJWC9MalBy
-            TVdSeGxZZTJJZXZUK3BpRk5uZ2p3SG8K9EIPz+Wu052dBb8t22TVzAqa56c4OOTc
-            7oya+HlJlyMramz0HMAYyX9UkHeICrSGdYPlPQlIJdoOd/8byavpRg==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB5U0oyVnIxdi9FWmJmdS9S
+            RHdZcjRNeWdtMEgyNG03K0MzdmZHRjJlSmhBCitKVzZOMmpab3NXVWN4YWE4aHlX
+            aVJFR1BWZVhRdnhTNDFBU0FtSDVOVG8KLS0tIGN1bTE2WE9HdVdUTjJRaXV3VVd6
+            UG9WaWlBUm5VNlRVV1hRbUluTkVjK1EKnJ4DlGkxa5a0mTJmJYCxTfB5r22XpOsU
+            aLLoJsY/ZvIfcfVvPv6EjfBCJkiaReUD1xrFOIR/c1icbnnVymQ1cA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-07-13T14:46:16Z"
-    mac: ENC[AES256_GCM,data:DLCaopuagt7YAN73jCGRvsDlQhNZ7kvby9LlZ8+jdh/xThnI3GP+YhPslJkI66zcrIZ5sVaEpQ4RvN0DU/yzXAepzvdoYj5u9TmTsHOzcP1Is3AIwmH3KejZ0b3paba4kCeuCtR//Xf2hs/zoTuyu8J3ka71Jr68DBFUqaL57sI=,iv:+ik4d9MWdstCmVsDcPiaQ9iSqVTRsWBI7/yfW85f/jI=,tag:LLay4N2nkAUD2Jbh9s41Mw==,type:str]
+    lastmodified: "2025-07-13T15:51:23Z"
+    mac: ENC[AES256_GCM,data:voQ91j77QzyNgUZV3FVxXe1dV6lY2hEob7QMeLYUrq5CCx41stJXHCBj+uJ6Pv9WHC/QyxLARpIlkfA2l1ba7xMfuT8M2iznfY5XgVEb/AIkBjmUSf/EL6lN6l2Q/ZuAD6nR6Ht11bMHvqxuXtMboTz0s4UDUARNgwF94Yh02J4=,iv:ZDUgkvmSR20R7yjl8GmuWs+IRjtJui3YzN4OuBOTeJk=,tag:vBjlXrYcsTYnhpsB5FRDYg==,type:str]
     encrypted_regex: ^(data|stringData|.*_secret)$
     version: 3.10.2
