--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -25,7 +25,7 @@ server {
 
     # Proxy API requests to the backend
     location /api/ {
-        proxy_pass http://recipefy-api-gateway:8080/;
+        proxy_pass http://api-gateway:8080/;
 
         add_header X-Debug hit-api-location always;
 
@@ -40,7 +40,7 @@ server {
 
     # Proxy auth requests to the auth service
     location /auth/ {
-        proxy_pass http://recipefy-keycloak-service-keycloak-spi:8080/auth/;
+        proxy_pass http://keycloak-service:8080/auth/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
