--- a/.github/workflows/genai-ci-cd.yml
+++ b/.github/workflows/genai-ci-cd.yml
@@ -11,7 +11,7 @@ env:
   REGISTRY: ghcr.io
   IMAGE_NAME: genai
   WORKING_DIRECTORY: genai
-  HELM_NAMESPACE: team-breaking-build
+  HELM_NAMESPACE: recipefy
   HELM_RELEASE_NAME: genai
   CHART_PATH: ./helm/genai
   SOPS_AGE_KEY: ${{ secrets.SOPS_AGE_KEY }}
