--- a/helm/keycloak-service/templates/service.yaml
+++ b/helm/keycloak-service/templates/service.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ include "keycloak-spi.fullname" . }}
+  name: {{ include "keycloak-service.fullname" . }}
   labels:
-    {{- include "keycloak-spi.labels" . | nindent 4 }}
+    {{- include "keycloak-service.labels" . | nindent 4 }}
 spec:
   type: {{ .Values.service.type }}
   ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
   selector:
-    {{- include "keycloak-spi.selectorLabels" . | nindent 4 }}
+    {{- include "keycloak-service.selectorLabels" . | nindent 4 }}
