--- a/helm/keycloak-service/templates/serviceaccount.yaml
+++ b/helm/keycloak-service/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "keycloak-spi.serviceAccountName" . }}
+  name: {{ include "keycloak-service.serviceAccountName" . }}
   labels:
-    {{- include "keycloak-spi.labels" . | nindent 4 }}
+    {{- include "keycloak-service.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
