--- a/genai/requirements.txt
+++ b/genai/requirements.txt
@@ -10,4 +10,7 @@ langchain-community
 langchain-text-splitters
 langchain-huggingface
 sentence-transformers
+pytest==7.4.3
+pytest-asyncio==0.23.2
+httpx==0.27.0
 prometheus-fastapi-instrumentator
