[CLIENT] Add missing sha check for deploy

--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -125,4 +125,5 @@ jobs:
         run: |
           helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
             --namespace ${{ env.HELM_NAMESPACE }} \
+            --set image.tag=${{ env.IMAGE_TAG }} \
             --wait --timeout 5m
