[CLIENT] Change ci-cd and proxy values for deployment as of mis-merge (#121)
* [CLIENT] Change ci-cd and proxy values for deployment as of mis-merge

* [CLIENT] Add image tag setting in ci-cd for client

* [CLIENT] Add missing sha check for deploy

--- a/.github/workflows/client-ci-cd.yml
+++ b/.github/workflows/client-ci-cd.yml
@@ -112,9 +112,18 @@ jobs:
         with:
           method: kubeconfig
           kubeconfig: ${{ secrets.KUBE_CONFIG }}
+      
+      - name: Set image tag
+        run: |
+          if [ -z "$GITHUB_SHA" ]; then
+            echo "IMAGE_TAG=latest" >> $GITHUB_ENV
+          else
+            echo "IMAGE_TAG=sha-$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+          fi
 
       - name: Deploy Helm Chart
         run: |
           helm upgrade --install ${{ env.HELM_RELEASE_NAME }} ${{ env.CHART_PATH }} \
             --namespace ${{ env.HELM_NAMESPACE }} \
+            --set image.tag=${{ env.IMAGE_TAG }} \
             --wait --timeout 5m
