--- a/helm/recipe/templates/deployment.yaml
+++ b/helm/recipe/templates/deployment.yaml
@@ -32,8 +32,8 @@ spec:
             - name: {{ .Values.container.portName }}
               containerPort: {{ .Values.container.port }}
               protocol: {{ .Values.container.protocol }}
-          {{- with .Values.env }}
-          env:
+          {{- with .Values.envFrom }}
+          envFrom:
             {{- toYaml . | nindent 12 }}
           {{- end }}
           {{- with .Values.livenessProbe }}
