[keycloak] fix keycloak pipeline yml

--- a/.github/workflows/keycloak-ci-cd.yml
+++ b/.github/workflows/keycloak-ci-cd.yml
@@ -3,9 +3,8 @@ name: CI/CD Pipeline for Keycloak SPI
 on:
   push:
     paths:
-      - ".github/workflows/keycloak-service-ci-cd.yml"
-      - 'server/keycloak/**'
-      - 'helm/keycloak-service/**'
+      - ".github/workflows/keycloak-ci-cd.yml"
+      - 'helm/keycloak/**'
   workflow_dispatch:
 
 env:
