[keycloak] change pipeline names (#123)
* [keycloak] remove dependency step on build

* [keycloak] change pipeline names

--- a/.github/workflows/keycloak-ci-cd.yml
+++ b/.github/workflows/keycloak-ci-cd.yml
@@ -1,4 +1,4 @@
-name: CI/CD Pipeline for Keycloak SPI
+name: CI/CD Pipeline for Keycloak
 
 on:
   push:
@@ -22,7 +22,6 @@ jobs:
     name: Deploy to Rancher with Helm
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
-    needs: build
 
     steps:
       - name: Checkout code
